[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/userInerface/UserProfile.gd" type="Script" id=1]
[ext_resource path="res://scenes/userInerface/Character.tscn" type="PackedScene" id=2]

[node name="UserProfile" type="Control"]
script = ExtResource( 1 )

[node name="SceneTitle" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 23.0
margin_right = 125.0
margin_bottom = 63.0

[node name="CharacterScreen" type="HBoxContainer" parent="SceneTitle"]
margin_right = 107.0
margin_bottom = 14.0

[node name="label" type="Label" parent="SceneTitle/CharacterScreen"]
margin_right = 107.0
margin_bottom = 14.0
text = "Character Screen"
align = 1

[node name="notification" type="HBoxContainer" parent="SceneTitle"]
margin_top = 18.0
margin_right = 107.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="SceneTitle/notification"]
margin_bottom = 14.0

[node name="CharacterBox" type="VBoxContainer" parent="."]
margin_left = 19.0
margin_top = 106.0
margin_right = 654.0
margin_bottom = 441.0

[node name="Character1" parent="CharacterBox" instance=ExtResource( 2 )]
visible = false
position = Vector2( -8, -2 )

[node name="Button1" type="Button" parent="CharacterBox/Character1"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -6.0
margin_top = -17.0
margin_right = 194.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 80 )

[node name="Character2" parent="CharacterBox" instance=ExtResource( 2 )]
visible = false
position = Vector2( -7, 110 )

[node name="Button2" type="Button" parent="CharacterBox/Character2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -6.0
margin_top = -15.0
margin_right = 194.0
margin_bottom = 65.0
rect_min_size = Vector2( 200, 80 )

[node name="Character3" parent="CharacterBox" instance=ExtResource( 2 )]
visible = false
position = Vector2( -16, 234 )

[node name="Button3" type="Button" parent="CharacterBox/Character3"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 3.0
margin_top = -15.0
margin_right = 203.0
margin_bottom = 65.0
rect_min_size = Vector2( 200, 80 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Select" type="Button" parent="."]
margin_left = 11.0
margin_top = 502.0
margin_right = 62.0
margin_bottom = 522.0
text = "Select"

[node name="Delete" type="Button" parent="."]
margin_left = 83.0
margin_top = 503.0
margin_right = 138.0
margin_bottom = 523.0
text = "Delete"

[node name="Create" type="Node" parent="."]

[node name="Label" type="Label" parent="Create"]
margin_left = 16.0
margin_top = 587.0
margin_right = 86.0
margin_bottom = 601.0
text = "Username:"

[node name="notification" type="HBoxContainer" parent="Create"]
margin_left = 16.0
margin_top = 633.0
margin_right = 123.0
margin_bottom = 647.0

[node name="Label" type="Label" parent="Create/notification"]
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="usernameField" type="LineEdit" parent="Create"]
margin_left = 12.0
margin_top = 605.0
margin_right = 147.0
margin_bottom = 629.0
rect_min_size = Vector2( 135, 24 )

[node name="UsernameCheck" type="Button" parent="Create"]
margin_left = 160.0
margin_top = 606.0
margin_right = 172.0
margin_bottom = 626.0
text = "Check Username"

[node name="Create" type="Button" parent="Create"]
margin_left = 8.0
margin_top = 653.0
margin_right = 157.0
margin_bottom = 673.0
text = "Create New Character"

[connection signal="pressed" from="CharacterBox/Character1/Button1" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="CharacterBox/Character2/Button2" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="CharacterBox/Character3/Button3" to="." method="_on_button3_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Create/UsernameCheck" to="." method="_on_UsernameCheck_pressed"]
[connection signal="pressed" from="Create/Create" to="." method="_on_create_pressed"]
